--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,21 +1,57 @@
-name: Deploy to GCP
+name: Deploy to Google Cloud Run
 
 on:
   push:
-    branches: [main]
+    branches: [master]
   workflow_dispatch:
+    inputs:
+      deploy_backend:
+        description: 'Deploy backend'
+        type: boolean
+        default: true
+      deploy_frontend:
+        description: 'Deploy frontend'
+        type: boolean
+        default: true
 
 env:
-  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+  PROJECT_ID: sebsandbbox
   REGION: europe-west1
   BACKEND_SERVICE: budget-backend
   FRONTEND_SERVICE: budget-frontend
-  ARTIFACT_REGISTRY: ${{ secrets.GCP_PROJECT_ID }}-docker
+  ARTIFACT_REGISTRY: budget-app
 
 jobs:
-  deploy:
-    name: Deploy to Cloud Run
+  # Detect which services changed
+  changes:
+    name: Detect Changes
     runs-on: ubuntu-latest
+    outputs:
+      backend: ${{ steps.filter.outputs.backend }}
+      frontend: ${{ steps.filter.outputs.frontend }}
+    steps:
+      - uses: actions/checkout@v4
+      
+      - uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            backend:
+              - 'backend/**'
+              - 'cloud/backend.dockerfile'
+            frontend:
+              - 'frontend/**'
+              - 'cloud/frontend.dockerfile'
+
+  # Deploy Backend
+  deploy-backend:
+    name: Deploy Backend
+    runs-on: ubuntu-latest
+    needs: changes
+    if: |
+      (github.event_name == 'workflow_dispatch' && github.event.inputs.deploy_backend == 'true') ||
+      (github.event_name == 'push' && needs.changes.outputs.backend == 'true')
+    
     permissions:
       contents: read
       id-token: write
@@ -27,24 +63,26 @@ jobs:
         id: auth
         uses: google-github-actions/auth@v2
         with:
-          workload_identity_provider: ${{ secrets.WIF_PROVIDER }}
-          service_account: ${{ secrets.WIF_SERVICE_ACCOUNT }}
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
 
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
 
-      - name: Configure Docker
-        run: gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev
+      - name: Configure Docker for Artifact Registry
+        run: gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
 
-      - name: Build and Push Backend
+      - name: Build Backend Image
         run: |
-          docker build -t ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.ARTIFACT_REGISTRY }}/${{ env.BACKEND_SERVICE }}:${{ github.sha }} ./backend
+          docker build \
+            -f cloud/backend.dockerfile \
+            -t ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.ARTIFACT_REGISTRY }}/${{ env.BACKEND_SERVICE }}:${{ github.sha }} \
+            -t ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.ARTIFACT_REGISTRY }}/${{ env.BACKEND_SERVICE }}:latest \
+            ./backend
+
+      - name: Push Backend Image
+        run: |
           docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.ARTIFACT_REGISTRY }}/${{ env.BACKEND_SERVICE }}:${{ github.sha }}
-
-      - name: Build and Push Frontend
-        run: |
-          docker build -t ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.ARTIFACT_REGISTRY }}/${{ env.FRONTEND_SERVICE }}:${{ github.sha }} ./frontend
-          docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.ARTIFACT_REGISTRY }}/${{ env.FRONTEND_SERVICE }}:${{ github.sha }}
+          docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.ARTIFACT_REGISTRY }}/${{ env.BACKEND_SERVICE }}:latest
 
       - name: Deploy Backend to Cloud Run
         run: |
@@ -53,15 +91,77 @@ jobs:
             --region ${{ env.REGION }} \
             --platform managed \
             --allow-unauthenticated \
-            --set-env-vars "DATABASE_URL=${{ secrets.DATABASE_URL }}" \
-            --set-env-vars "SECRET_KEY=${{ secrets.SECRET_KEY }}" \
-            --set-env-vars "CORS_ORIGINS=${{ secrets.CORS_ORIGINS }}"
+            --memory 512Mi \
+            --cpu 1 \
+            --min-instances 0 \
+            --max-instances 2 \
+            --concurrency 80 \
+            --timeout 300 \
+            --set-secrets="DATABASE_URL=budget-database-url:latest,SECRET_KEY=budget-secret-key:latest" \
+            --set-env-vars="CORS_ORIGINS=https://budget-frontend-1027957729311.europe-west1.run.app"
 
       - name: Get Backend URL
         id: backend-url
         run: |
           URL=$(gcloud run services describe ${{ env.BACKEND_SERVICE }} --region ${{ env.REGION }} --format 'value(status.url)')
           echo "url=$URL" >> $GITHUB_OUTPUT
+          echo "✅ Backend deployed to: $URL"
+
+    outputs:
+      backend_url: ${{ steps.backend-url.outputs.url }}
+
+  # Deploy Frontend
+  deploy-frontend:
+    name: Deploy Frontend
+    runs-on: ubuntu-latest
+    needs: [changes, deploy-backend]
+    # Run if backend was deployed OR if only frontend changed
+    if: |
+      always() && 
+      (
+        (github.event_name == 'workflow_dispatch' && github.event.inputs.deploy_frontend == 'true') ||
+        (github.event_name == 'push' && needs.changes.outputs.frontend == 'true')
+      )
+    
+    permissions:
+      contents: read
+      id-token: write
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Google Auth
+        id: auth
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+
+      - name: Configure Docker for Artifact Registry
+        run: gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
+
+      - name: Get Backend URL
+        id: backend-url
+        run: |
+          URL=$(gcloud run services describe ${{ env.BACKEND_SERVICE }} --region ${{ env.REGION }} --format 'value(status.url)')
+          echo "url=$URL" >> $GITHUB_OUTPUT
+          echo "Backend URL: $URL"
+
+      - name: Build Frontend Image
+        run: |
+          docker build \
+            -f cloud/frontend.dockerfile \
+            --build-arg NEXT_PUBLIC_API_URL=${{ steps.backend-url.outputs.url }} \
+            -t ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.ARTIFACT_REGISTRY }}/${{ env.FRONTEND_SERVICE }}:${{ github.sha }} \
+            -t ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.ARTIFACT_REGISTRY }}/${{ env.FRONTEND_SERVICE }}:latest \
+            ./frontend
+
+      - name: Push Frontend Image
+        run: |
+          docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.ARTIFACT_REGISTRY }}/${{ env.FRONTEND_SERVICE }}:${{ github.sha }}
+          docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.ARTIFACT_REGISTRY }}/${{ env.FRONTEND_SERVICE }}:latest
 
       - name: Deploy Frontend to Cloud Run
         run: |
@@ -70,10 +170,42 @@ jobs:
             --region ${{ env.REGION }} \
             --platform managed \
             --allow-unauthenticated \
-            --set-env-vars "NEXT_PUBLIC_API_URL=${{ steps.backend-url.outputs.url }}"
+            --memory 256Mi \
+            --cpu 1 \
+            --min-instances 0 \
+            --max-instances 2 \
+            --concurrency 80 \
+            --set-env-vars="NEXT_PUBLIC_API_URL=${{ steps.backend-url.outputs.url }}"
 
       - name: Get Frontend URL
-        id: frontend-url
         run: |
           URL=$(gcloud run services describe ${{ env.FRONTEND_SERVICE }} --region ${{ env.REGION }} --format 'value(status.url)')
-          echo "Frontend deployed to: $URL"
+          echo "✅ Frontend deployed to: $URL"
+
+  # Update CORS after both deployments
+  update-cors:
+    name: Update Backend CORS
+    runs-on: ubuntu-latest
+    needs: [deploy-backend, deploy-frontend]
+    if: always() && needs.deploy-frontend.result == 'success'
+    
+    permissions:
+      contents: read
+      id-token: write
+
+    steps:
+      - name: Google Auth
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+
+      - name: Update CORS
+        run: |
+          FRONTEND_URL=$(gcloud run services describe ${{ env.FRONTEND_SERVICE }} --region ${{ env.REGION }} --format 'value(status.url)')
+          gcloud run services update ${{ env.BACKEND_SERVICE }} \
+            --region ${{ env.REGION }} \
+            --update-env-vars="^@^CORS_ORIGINS=${FRONTEND_URL},http://localhost:3001,http://localhost:3000"
+          echo "✅ CORS updated for: $FRONTEND_URL"
