--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -12,9 +12,13 @@ on:
         default: true
 
 env:
-  PROJECT_ID: sebsandbbox
-  REGION: europe-west1
-  BACKUP_BUCKET: budget-app-backups
+  # Secrets from organization
+  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+  # Variables from repository
+  REGION: ${{ vars.GCP_REGION }}
+  BACKUP_BUCKET: ${{ vars.BACKUP_BUCKET }}
+  DATABASE_URL_SECRET: ${{ vars.DATABASE_URL_SECRET }}
+  BACKUP_RETENTION_DAYS: ${{ vars.BACKUP_RETENTION_DAYS }}
 
 jobs:
   backup:
@@ -31,7 +35,7 @@ jobs:
       - name: Google Auth
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          credentials_json: ${{ secrets.GCS_GH_SVC_ACCOUNT_JSON_KEY }}
 
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
@@ -44,7 +48,7 @@ jobs:
       - name: Get Database URL from Secret Manager
         id: db-url
         run: |
-          DB_URL=$(gcloud secrets versions access latest --secret=budget-database-url)
+          DB_URL=$(gcloud secrets versions access latest --secret=${{ env.DATABASE_URL_SECRET }})
           # Convert asyncpg URL to psql URL
           PSQL_URL=$(echo "$DB_URL" | sed 's/postgresql+asyncpg/postgresql/')
           echo "::add-mask::$PSQL_URL"
@@ -71,23 +75,26 @@ jobs:
 
       - name: Create GCS Bucket if not exists
         run: |
+          RETENTION="${{ env.BACKUP_RETENTION_DAYS }}"
+          RETENTION="${RETENTION:-30}"
+          
           if ! gsutil ls "gs://${{ env.BACKUP_BUCKET }}" 2>/dev/null; then
             gsutil mb -l ${{ env.REGION }} "gs://${{ env.BACKUP_BUCKET }}"
-            # Set lifecycle policy to delete backups older than 30 days
-            cat > /tmp/lifecycle.json << 'EOF'
+            # Set lifecycle policy to delete old backups
+            cat > /tmp/lifecycle.json << EOF
           {
             "lifecycle": {
               "rule": [
                 {
                   "action": {"type": "Delete"},
-                  "condition": {"age": 30}
+                  "condition": {"age": ${RETENTION}}
                 }
               ]
             }
           }
           EOF
             gsutil lifecycle set /tmp/lifecycle.json "gs://${{ env.BACKUP_BUCKET }}"
-            echo "✅ Bucket created with 30-day retention policy"
+            echo "✅ Bucket created with ${RETENTION}-day retention policy"
           fi
 
       - name: Upload to Google Cloud Storage
@@ -108,10 +115,13 @@ jobs:
 
       - name: Summary
         run: |
+          RETENTION="${{ env.BACKUP_RETENTION_DAYS }}"
+          RETENTION="${RETENTION:-30}"
           echo "## 💾 Backup Summary" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "- **Timestamp:** ${{ steps.backup.outputs.timestamp }}" >> $GITHUB_STEP_SUMMARY
           echo "- **File:** ${{ steps.backup.outputs.file }}" >> $GITHUB_STEP_SUMMARY
           echo "- **Storage:** gs://${{ env.BACKUP_BUCKET }}/${{ steps.backup.outputs.file }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **Retention:** ${RETENTION} days" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "✅ Backup completed successfully!" >> $GITHUB_STEP_SUMMARY
