--- a/backend/Dockerfile.local
+++ b/backend/Dockerfile.local
@@ -1,4 +1,3 @@
-# Dockerfile optimisé pour Cloud Run
 FROM python:3.12-slim
 
 WORKDIR /app
@@ -21,9 +20,8 @@ COPY . .
 RUN useradd -m -u 1000 appuser && chown -R appuser:appuser /app
 USER appuser
 
-# Cloud Run utilise la variable PORT
-ENV PORT=8080
-EXPOSE 8080
+# Expose port
+EXPOSE 8000
 
-# Run the application - Cloud Run injecte $PORT
-CMD exec uvicorn app.main:app --host 0.0.0.0 --port ${PORT}
+# Run the application
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
