--- a/frontend/Dockerfile.local
+++ b/frontend/Dockerfile.local
@@ -1,4 +1,3 @@
-# Dockerfile optimisé pour Cloud Run
 FROM node:22-alpine AS base
 
 # Install bun
@@ -18,12 +17,9 @@ WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 
-ENV NEXT_TELEMETRY_DISABLED=1
-
-# L'URL de l'API sera injectée au runtime via variable d'environnement
-# On utilise une valeur placeholder qui sera remplacée
-ARG NEXT_PUBLIC_API_URL=https://BACKEND_URL_PLACEHOLDER
-ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+ENV NEXT_TELEMETRY_DISABLED 1
+# Set API URL at build time - will be replaced by hostname detection in client
+ENV NEXT_PUBLIC_API_URL http://localhost:8001
 
 RUN bun run build
 
@@ -31,8 +27,8 @@ RUN bun run build
 FROM base AS runner
 WORKDIR /app
 
-ENV NODE_ENV=production
-ENV NEXT_TELEMETRY_DISABLED=1
+ENV NODE_ENV production
+ENV NEXT_TELEMETRY_DISABLED 1
 
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
@@ -47,10 +43,9 @@ COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
 USER nextjs
 
-# Cloud Run utilise PORT (défaut 8080)
-ENV PORT=3000
 EXPOSE 3000
 
-ENV HOSTNAME="0.0.0.0"
+ENV PORT 3000
+ENV HOSTNAME "0.0.0.0"
 
 CMD ["node", "server.js"]
