fix: pass NEXT_PUBLIC_API_URL as build arg in dev compose

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -41,6 +41,8 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        NEXT_PUBLIC_API_URL: http://localhost:8000
     container_name: budget_frontend_dev
     restart: unless-stopped
     environment:
