--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,30 @@
 # Environment variables
+
+# Application
+APP_NAME=DuoBudget
+APP_VERSION=1.0.0
+DEBUG=false
+ENVIRONMENT=development
+
+# Database
 DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/budget_db
+
+# Security
 SECRET_KEY=change-this-very-secret-key-in-production-please
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=10080
-DEBUG=false
-ENVIRONMENT=development
-CORS_ORIGINS=["http://localhost:3000","http://frontend:3000"]
+
+# CORS
+CORS_ORIGINS=http://localhost:3000,http://frontend:3000
+
+# Email SMTP (for magic links)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASSWORD=your-app-password
+SMTP_FROM_EMAIL=your-email@gmail.com
+SMTP_FROM_NAME=DuoBudget
+
+# Magic link settings
+MAGIC_LINK_EXPIRE_MINUTES=15
+FRONTEND_URL=http://localhost:3000
