--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -28,6 +28,14 @@ services:
       DATABASE_URL: postgresql+asyncpg://budget_user:budget_password@db:5432/budget_db
       SECRET_KEY: dev-secret-key-not-for-production
       CORS_ORIGINS: "*"
+      # Email SMTP settings (for magic links)
+      SMTP_HOST: smtp.gmail.com
+      SMTP_PORT: 587
+      SMTP_USER: sebpicot@gmail.com
+      SMTP_PASSWORD: ${SMTP_PASSWORD:-}
+      SMTP_FROM_EMAIL: sebpicot@gmail.com
+      SMTP_FROM_NAME: DuoBudget
+      FRONTEND_URL: http://localhost:3000
     volumes:
       - ./backend:/app
     ports:
