--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -94,7 +94,7 @@ jobs:
           # Get frontend URL for CORS (if exists)
           FRONTEND_URL=$(gcloud run services describe ${{ env.FRONTEND_SERVICE }} --region ${{ env.REGION }} --format 'value(status.url)' 2>/dev/null || echo "")
           
-          CORS_ORIGINS="http://localhost:3001,http://localhost:3000"
+          CORS_ORIGINS="http://localhost:3001,http://localhost:3000,https://budget.novacat.fr"
           if [ -n "$FRONTEND_URL" ]; then
             CORS_ORIGINS="${FRONTEND_URL},${CORS_ORIGINS}"
           fi
@@ -110,7 +110,7 @@ jobs:
             --max-instances ${{ vars.MAX_INSTANCES || '2' }} \
             --concurrency ${{ vars.CONCURRENCY || '80' }} \
             --timeout ${{ vars.TIMEOUT || '300' }} \
-            --set-secrets="DATABASE_URL=${{ env.DATABASE_URL_SECRET }}:latest,SECRET_KEY=${{ env.SECRET_KEY_SECRET }}:latest" \
+            --set-secrets="DATABASE_URL=${{ env.DATABASE_URL_SECRET }}:latest,SECRET_KEY=${{ env.SECRET_KEY_SECRET }}:latest,SMTP_HOST=smtp-host:latest,SMTP_PORT=smtp-port:latest,SMTP_USER=smtp-user:latest,SMTP_PASSWORD=smtp-password:latest,SMTP_FROM_EMAIL=smtp-from-email:latest,SMTP_FROM_NAME=smtp-from-name:latest,FRONTEND_URL=frontend-url:latest" \
             --set-env-vars="CORS_ORIGINS=${CORS_ORIGINS}"
 
       - name: Get Backend URL
