fix: include budget.novacat.fr in CORS update job

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -219,5 +219,5 @@ jobs:
           FRONTEND_URL=$(gcloud run services describe ${{ env.FRONTEND_SERVICE }} --region ${{ env.REGION }} --format 'value(status.url)')
           gcloud run services update ${{ env.BACKEND_SERVICE }} \
             --region ${{ env.REGION }} \
-            --update-env-vars="^@^CORS_ORIGINS=${FRONTEND_URL},http://localhost:3001,http://localhost:3000"
-          echo "✅ CORS updated for: $FRONTEND_URL"
+            --update-env-vars="^@^CORS_ORIGINS=https://budget.novacat.fr,${FRONTEND_URL},http://localhost:3001,http://localhost:3000"
+          echo "✅ CORS updated for: https://budget.novacat.fr, $FRONTEND_URL"
