fix(security): remove hardcoded passwords from docker-compose files
- Replace hardcoded POSTGRES_PASSWORD with required env vars
- Replace hardcoded SECRET_KEY with required env vars
- Update .env.example with all required configuration variables
- Resolves SonarQube security blocker alerts

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,29 @@
-# Environment
+# Environment - Copy this file to .env and fill in the values
+
+# Database
 POSTGRES_USER=budget_user
-POSTGRES_PASSWORD=budget_password
+POSTGRES_PASSWORD=CHANGE_ME_TO_A_SECURE_PASSWORD
 POSTGRES_DB=budget_db
-SECRET_KEY=your-super-secret-key-change-this-in-production
+
+# Backend Security
+SECRET_KEY=CHANGE_ME_TO_A_RANDOM_STRING
+
+# CORS
 CORS_ORIGINS=http://localhost:3000,http://localhost
+
+# Email SMTP (for magic links)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASSWORD=your-app-password
+SMTP_FROM_EMAIL=your-email@gmail.com
+SMTP_FROM_NAME=DuoBudget
+FRONTEND_URL=http://localhost:3000
+
+# Ports (optional)
+DB_PORT=5432
+BACKEND_PORT=8000
+FRONTEND_PORT=3000
+
+# Frontend
+NEXT_PUBLIC_API_URL=http://localhost:8000
