--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,6 @@ Thumbs.db
 
 #Ignore vscode AI rules
 .github/instructions/codacy.instructions.md
+
+# Project notes (local documentation)
+PROJECT_NOTES.md
