fix: Force HTTPS for backend API URL in production
- Workflow: Replace http:// with https:// when getting backend URL
- Client: Force HTTPS replacement in server-side rendering
- This fixes Mixed Content errors when frontend tries to call HTTP backend over HTTPS

Resolves: Frontend calling http://budget-backend-xxx instead of https://

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -158,6 +158,8 @@ jobs:
         id: backend-url
         run: |
           URL=$(gcloud run services describe ${{ env.BACKEND_SERVICE }} --region ${{ env.REGION }} --format 'value(status.url)')
+          # Force HTTPS (Cloud Run always serves HTTPS)
+          URL="${URL/http:/https:}"
           echo "url=$URL" >> $GITHUB_OUTPUT
           echo "Backend URL: $URL"
 
