--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -91,13 +91,8 @@ jobs:
 
       - name: Deploy Backend to Cloud Run
         run: |
-          # Get frontend URL for CORS (if exists)
-          FRONTEND_URL=$(gcloud run services describe ${{ env.FRONTEND_SERVICE }} --region ${{ env.REGION }} --format 'value(status.url)' 2>/dev/null || echo "")
-          
-          CORS_ORIGINS="http://localhost:3001,http://localhost:3000,https://budget.novacat.fr"
-          if [ -n "$FRONTEND_URL" ]; then
-            CORS_ORIGINS="${FRONTEND_URL},${CORS_ORIGINS}"
-          fi
+          # ✅ Deploy with IP restriction via environment variable
+          # Backend middleware will filter requests by IP and Referer
           
           gcloud run deploy ${{ env.BACKEND_SERVICE }} \
             --image ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.ARTIFACT_REGISTRY }}/${{ env.BACKEND_SERVICE }}:${{ github.sha }} \
@@ -111,7 +106,7 @@ jobs:
             --concurrency ${{ vars.CONCURRENCY || '80' }} \
             --timeout ${{ vars.TIMEOUT || '300' }} \
             --set-secrets="DATABASE_URL=${{ env.DATABASE_URL_SECRET }}:latest,SECRET_KEY=${{ env.SECRET_KEY_SECRET }}:latest,SMTP_HOST=smtp-host:latest,SMTP_PORT=smtp-port:latest,SMTP_USER=smtp-user:latest,SMTP_PASSWORD=smtp-password:latest,SMTP_FROM_EMAIL=smtp-from-email:latest,SMTP_FROM_NAME=smtp-from-name:latest,FRONTEND_URL=frontend-url:latest" \
-            --set-env-vars="^##^CORS_ORIGINS=${CORS_ORIGINS}"
+            --set-env-vars="CORS_ORIGINS=*,ALLOWED_IPS=82.65.136.32,ALLOWED_REFERERS=budget.novacat.fr,localhost"
 
       - name: Get Backend URL
         id: backend-url
@@ -119,6 +114,7 @@ jobs:
           URL=$(gcloud run services describe ${{ env.BACKEND_SERVICE }} --region ${{ env.REGION }} --format 'value(status.url)')
           echo "url=$URL" >> $GITHUB_OUTPUT
           echo "✅ Backend deployed to: $URL"
+          echo "🔒 Security: Restricted to frontend (budget.novacat.fr) and IP 82.65.136.32"
 
     outputs:
       backend_url: ${{ steps.backend-url.outputs.url }}
@@ -154,20 +150,12 @@ jobs:
       - name: Configure Docker for Artifact Registry
         run: gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
 
-      - name: Get Backend URL
-        id: backend-url
-        run: |
-          URL=$(gcloud run services describe ${{ env.BACKEND_SERVICE }} --region ${{ env.REGION }} --format 'value(status.url)')
-          # Force HTTPS (Cloud Run always serves HTTPS)
-          URL="${URL/http:/https:}"
-          echo "url=$URL" >> $GITHUB_OUTPUT
-          echo "Backend URL: $URL"
-
+      # ✅ SOLUTION RADICALE: Ne plus utiliser NEXT_PUBLIC_API_URL
+      # Le frontend gère les URLs hardcodées en fonction du hostname
       - name: Build Frontend Image
         run: |
           docker build \
             -f cloud/frontend.dockerfile \
-            --build-arg NEXT_PUBLIC_API_URL=${{ steps.backend-url.outputs.url }} \
             -t ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.ARTIFACT_REGISTRY }}/${{ env.FRONTEND_SERVICE }}:${{ github.sha }} \
             -t ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.ARTIFACT_REGISTRY }}/${{ env.FRONTEND_SERVICE }}:latest \
             ./frontend
@@ -188,38 +176,10 @@ jobs:
             --cpu ${{ vars.FRONTEND_CPU || '1' }} \
             --min-instances ${{ vars.MIN_INSTANCES || '0' }} \
             --max-instances ${{ vars.MAX_INSTANCES || '2' }} \
-            --concurrency ${{ vars.CONCURRENCY || '80' }} \
-            --set-env-vars="NEXT_PUBLIC_API_URL=${{ steps.backend-url.outputs.url }}"
+            --concurrency ${{ vars.CONCURRENCY || '80' }}
 
       - name: Get Frontend URL
         run: |
           URL=$(gcloud run services describe ${{ env.FRONTEND_SERVICE }} --region ${{ env.REGION }} --format 'value(status.url)')
           echo "✅ Frontend deployed to: $URL"
-
-  # Update CORS after both deployments
-  update-cors:
-    name: Update Backend CORS
-    runs-on: ubuntu-latest
-    needs: [deploy-backend, deploy-frontend]
-    if: always() && needs.deploy-frontend.result == 'success'
-    
-    permissions:
-      contents: read
-      id-token: write
-
-    steps:
-      - name: Google Auth
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: ${{ secrets.GCS_GH_SVC_ACCOUNT_JSON_KEY }}
-
-      - name: Set up Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2
-
-      - name: Update CORS
-        run: |
-          FRONTEND_URL=$(gcloud run services describe ${{ env.FRONTEND_SERVICE }} --region ${{ env.REGION }} --format 'value(status.url)')
-          gcloud run services update ${{ env.BACKEND_SERVICE }} \
-            --region ${{ env.REGION }} \
-            --update-env-vars="^@^CORS_ORIGINS=https://budget.novacat.fr,${FRONTEND_URL},http://localhost:3001,http://localhost:3000"
-          echo "✅ CORS updated for: https://budget.novacat.fr, $FRONTEND_URL"
+          echo "✅ CORS: Wildcard (*) enabled on backend - no update needed"
