fix: Workflow deploy - échapper caractères spéciaux dans env vars
Problème: gcloud refuse les virgules/points dans --set-env-vars
Solution: Utiliser ^@^ comme délimiteur au lieu de virgules

Technique:
- Utilisation du format ^@^VAR1=val1@VAR2=val2@VAR3=val3
- Permet les virgules et points dans les valeurs
- Séparateur @ entre variables, virgule dans ALLOWED_REFERERS OK

Résout: Bad syntax for dict arg: [localhost]

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -93,6 +93,7 @@ jobs:
         run: |
           # ✅ Deploy with IP restriction via environment variable
           # Backend middleware will filter requests by IP and Referer
+          # Use ^@^ delimiter to handle special characters (commas, dots) in env vars
           
           gcloud run deploy ${{ env.BACKEND_SERVICE }} \
             --image ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.ARTIFACT_REGISTRY }}/${{ env.BACKEND_SERVICE }}:${{ github.sha }} \
@@ -106,7 +107,7 @@ jobs:
             --concurrency ${{ vars.CONCURRENCY || '80' }} \
             --timeout ${{ vars.TIMEOUT || '300' }} \
             --set-secrets="DATABASE_URL=${{ env.DATABASE_URL_SECRET }}:latest,SECRET_KEY=${{ env.SECRET_KEY_SECRET }}:latest,SMTP_HOST=smtp-host:latest,SMTP_PORT=smtp-port:latest,SMTP_USER=smtp-user:latest,SMTP_PASSWORD=smtp-password:latest,SMTP_FROM_EMAIL=smtp-from-email:latest,SMTP_FROM_NAME=smtp-from-name:latest,FRONTEND_URL=frontend-url:latest" \
-            --set-env-vars="CORS_ORIGINS=*,ALLOWED_IPS=82.65.136.32,ALLOWED_REFERERS=budget.novacat.fr,localhost"
+            --set-env-vars="^@^CORS_ORIGINS=*@ALLOWED_IPS=82.65.136.32@ALLOWED_REFERERS=budget.novacat.fr,localhost"
 
       - name: Get Backend URL
         id: backend-url
