Fix backup workflow: Update pg_dump to version 17 for Neon compatibility
- Install postgresql-client-17 instead of default version 16
- Add version verification step
- Resolves server version mismatch error with Neon PostgreSQL 17

--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -43,7 +43,18 @@ jobs:
       - name: Install PostgreSQL client
         run: |
           sudo apt-get update
-          sudo apt-get install -y postgresql-client
+          sudo apt-get install -y wget ca-certificates lsb-release
+          
+          # Add PostgreSQL repository for version 17
+          wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
+          echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" | sudo tee /etc/apt/sources.list.d/pgdg.list
+          
+          sudo apt-get update
+          sudo apt-get install -y postgresql-client-17
+
+      - name: Verify pg_dump version
+        run: |
+          pg_dump --version
 
       - name: Get Database URL from Secret Manager
         id: db-url
