--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -12,9 +12,7 @@ on:
         default: true
 
 env:
-  # Secrets from organization
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-  # Variables from repository
   REGION: ${{ vars.GCP_REGION }}
   BACKUP_BUCKET: ${{ vars.BACKUP_BUCKET }}
   DATABASE_URL_SECRET: ${{ vars.DATABASE_URL_SECRET }}
@@ -24,13 +22,31 @@ jobs:
   backup:
     name: Backup Neon Database
     runs-on: ubuntu-latest
-    
     permissions:
       contents: read
       id-token: write
+    defaults:
+      run:
+        shell: bash
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Resolve upload flag
+        id: upload-flag
+        run: |
+          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
+            FLAG="${{ github.event.inputs.upload_to_gcs }}"
+          else
+            FLAG="true"
+          fi
+          echo "upload=${FLAG}" >> "$GITHUB_OUTPUT"
+
+      - name: Validate required inputs
+        run: |
+          : "${BACKUP_BUCKET:?BACKUP_BUCKET is required}"
+          : "${DATABASE_URL_SECRET:?DATABASE_URL_SECRET is required}"
 
       - name: Google Auth
         uses: google-github-actions/auth@v2
@@ -40,105 +56,106 @@ jobs:
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
 
-      - name: Install PostgreSQL client
+      - name: Install PostgreSQL client 17
         run: |
           sudo apt-get update
           sudo apt-get install -y wget ca-certificates lsb-release
-          
-          # Add PostgreSQL repository for version 17 (modern keyring method)
           wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo gpg --dearmor -o /usr/share/keyrings/postgresql-keyring.gpg
-          echo "deb [signed-by=/usr/share/keyrings/postgresql-keyring.gpg] http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" | sudo tee /etc/apt/sources.list.d/pgdg.list
-          
+          echo "deb [signed-by=/usr/share/keyrings/postgresql-keyring.gpg] http://apt.postgresql.org/pub/repos/apt/ $(lsb_release -cs)-pgdg main" | sudo tee /etc/apt/sources.list.d/pgdg.list
           sudo apt-get update
           sudo apt-get install -y postgresql-client-17
 
       - name: Verify pg_dump version
-        run: |
-          pg_dump --version
+        run: pg_dump --version
 
-      - name: Get Database URL from Secret Manager
+      - name: Fetch and parse database URL
         id: db-url
         run: |
-          DB_URL=$(gcloud secrets versions access latest --secret=${{ env.DATABASE_URL_SECRET }})
-          
-          # Convert asyncpg URL to psql URL
-          PSQL_URL=$(echo "$DB_URL" | sed 's/postgresql+asyncpg/postgresql/')
-          
-          # Extract components from URL to avoid query parameter issues
-          # Format: postgresql://user:pass@host:port/dbname?params
-          if [[ $PSQL_URL =~ postgresql://([^:]+):([^@]+)@([^:/]+):?([0-9]*)/([^\?]+)(\?.*)? ]]; then
-            DB_USER="${BASH_REMATCH[1]}"
-            DB_PASS="${BASH_REMATCH[2]}"
-            DB_HOST="${BASH_REMATCH[3]}"
-            DB_PORT="${BASH_REMATCH[4]:-5432}"
-            DB_NAME="${BASH_REMATCH[5]}"
-            
-            echo "::add-mask::$DB_PASS"
-            echo "user=$DB_USER" >> $GITHUB_OUTPUT
-            echo "password=$DB_PASS" >> $GITHUB_OUTPUT
-            echo "host=$DB_HOST" >> $GITHUB_OUTPUT
-            echo "port=$DB_PORT" >> $GITHUB_OUTPUT
-            echo "database=$DB_NAME" >> $GITHUB_OUTPUT
-          else
-            echo "❌ Failed to parse DATABASE_URL"
+          DB_URL=$(gcloud secrets versions access latest --secret="${{ env.DATABASE_URL_SECRET }}")
+          if [[ -z "$DB_URL" ]]; then
+            echo "❌ Secret ${{ env.DATABASE_URL_SECRET }} is empty" >&2
             exit 1
           fi
 
-      - name: Create Backup
+          # Normalize scheme for asyncpg URLs
+          DB_URL=${DB_URL/postgresql+asyncpg/postgresql}
+          export DB_URL
+
+          python - <<'PY'
+          import os
+          import sys
+          from urllib.parse import urlparse
+
+          raw = os.environ.get("DB_URL", "")
+          parsed = urlparse(raw)
+
+          if not parsed.scheme.startswith("postgresql"):
+              sys.exit("Invalid DATABASE_URL scheme")
+          if not parsed.hostname or not parsed.username or not parsed.password or not parsed.path:
+              sys.exit("DATABASE_URL missing host/user/password/database")
+
+          db_name = parsed.path.lstrip('/')
+          port = parsed.port or 5432
+
+          print(f"::add-mask::{parsed.password}")
+
+          output = os.environ.get("GITHUB_OUTPUT")
+          with open(output, "a", encoding="utf-8") as fh:
+              fh.write(f"user={parsed.username}\n")
+              fh.write(f"password={parsed.password}\n")
+              fh.write(f"host={parsed.hostname}\n")
+              fh.write(f"port={port}\n")
+              fh.write(f"database={db_name}\n")
+          PY
+
+      - name: Create backup
         id: backup
         env:
           PGPASSWORD: ${{ steps.db-url.outputs.password }}
         run: |
-          TIMESTAMP=$(date +%Y%m%d_%H%M%S)
+          TIMESTAMP=$(date -u +%Y%m%d_%H%M%S)
           BACKUP_FILE="budget_backup_${TIMESTAMP}.sql"
-          
+
           echo "Creating backup: $BACKUP_FILE"
-          # Use individual parameters instead of URL to avoid SSL query param issues
           pg_dump \
             -h "${{ steps.db-url.outputs.host }}" \
             -p "${{ steps.db-url.outputs.port }}" \
             -U "${{ steps.db-url.outputs.user }}" \
             -d "${{ steps.db-url.outputs.database }}" \
+            --no-owner \
+            --format=plain \
             --no-password \
             > "$BACKUP_FILE"
-          
-          # Compress
+
           gzip "$BACKUP_FILE"
           BACKUP_FILE="${BACKUP_FILE}.gz"
-          
-          echo "file=$BACKUP_FILE" >> $GITHUB_OUTPUT
-          echo "timestamp=$TIMESTAMP" >> $GITHUB_OUTPUT
-          
-          # Show backup info
+
+          echo "file=$BACKUP_FILE" >> "$GITHUB_OUTPUT"
+          echo "timestamp=$TIMESTAMP" >> "$GITHUB_OUTPUT"
+
           ls -lh "$BACKUP_FILE"
 
-      - name: Create GCS Bucket if not exists
+      - name: Check GCS bucket
+        if: steps.upload-flag.outputs.upload != 'false'
         run: |
-          RETENTION="${{ env.BACKUP_RETENTION_DAYS }}"
-          RETENTION="${RETENTION:-30}"
-          
-          if ! gsutil ls "gs://${{ env.BACKUP_BUCKET }}" 2>/dev/null; then
-            echo "❌ Bucket gs://${{ env.BACKUP_BUCKET }} does not exist. Please create it manually with proper permissions."
-            echo "Required permissions for the service account:"
-            echo "- Storage Object Admin or Storage Admin role"
-            echo "- Or specific permissions: storage.objects.create, storage.objects.delete, storage.objects.get, storage.objects.list"
+          if ! gsutil ls "gs://${{ env.BACKUP_BUCKET }}" >/dev/null 2>&1; then
+            echo "❌ Bucket gs://${{ env.BACKUP_BUCKET }} not found. Create it (region ${{ env.REGION }}) and grant the service account Storage Object Admin." >&2
             exit 1
-          else
-            echo "✅ Bucket gs://${{ env.BACKUP_BUCKET }} exists"
           fi
 
       - name: Upload to Google Cloud Storage
-        if: github.event.inputs.upload_to_gcs != 'false'
+        if: steps.upload-flag.outputs.upload != 'false'
         run: |
           gsutil cp "${{ steps.backup.outputs.file }}" "gs://${{ env.BACKUP_BUCKET }}/"
           echo "✅ Backup uploaded to gs://${{ env.BACKUP_BUCKET }}/${{ steps.backup.outputs.file }}"
 
       - name: List recent backups
+        if: steps.upload-flag.outputs.upload != 'false'
         run: |
           echo "📦 Recent backups in GCS:"
           gsutil ls -l "gs://${{ env.BACKUP_BUCKET }}/" | tail -10
 
-      - name: Cleanup old local backups
+      - name: Cleanup local backups
         run: |
           rm -f *.sql.gz
           echo "✅ Local cleanup done"
@@ -147,11 +164,16 @@ jobs:
         run: |
           RETENTION="${{ env.BACKUP_RETENTION_DAYS }}"
           RETENTION="${RETENTION:-30}"
-          echo "## 💾 Backup Summary" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "- **Timestamp:** ${{ steps.backup.outputs.timestamp }}" >> $GITHUB_STEP_SUMMARY
-          echo "- **File:** ${{ steps.backup.outputs.file }}" >> $GITHUB_STEP_SUMMARY
-          echo "- **Storage:** gs://${{ env.BACKUP_BUCKET }}/${{ steps.backup.outputs.file }}" >> $GITHUB_STEP_SUMMARY
-          echo "- **Retention:** ${RETENTION} days" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "✅ Backup completed successfully!" >> $GITHUB_STEP_SUMMARY
+
+          echo "## 💾 Backup Summary" >> "$GITHUB_STEP_SUMMARY"
+          echo "" >> "$GITHUB_STEP_SUMMARY"
+          echo "- **Timestamp:** ${{ steps.backup.outputs.timestamp }}" >> "$GITHUB_STEP_SUMMARY"
+          echo "- **File:** ${{ steps.backup.outputs.file }}" >> "$GITHUB_STEP_SUMMARY"
+          if [[ "${{ steps.upload-flag.outputs.upload }}" != "false" ]]; then
+            echo "- **Storage:** gs://${{ env.BACKUP_BUCKET }}/${{ steps.backup.outputs.file }}" >> "$GITHUB_STEP_SUMMARY"
+          else
+            echo "- **Storage:** upload skipped" >> "$GITHUB_STEP_SUMMARY"
+          fi
+          echo "- **Retention:** ${RETENTION} days" >> "$GITHUB_STEP_SUMMARY"
+          echo "" >> "$GITHUB_STEP_SUMMARY"
+          echo "✅ Backup completed" >> "$GITHUB_STEP_SUMMARY"
