--- a/.github/workflows/backup-neon.yml
+++ b/.github/workflows/backup-neon.yml
@@ -40,7 +40,13 @@ jobs:
           sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
           wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
           sudo apt-get update
+          
+          # Supprimer les anciennes versions et installer la 17
+          sudo apt-get remove -y postgresql-client-16 || true
           sudo apt-get install -y postgresql-client-17
+          
+          # Vérifier la version installée
+          pg_dump --version
           
           # Créer le backup
           TIMESTAMP=$(date +%Y%m%d_%H%M%S)
