--- a/.github/workflows/backup-neon.yml
+++ b/.github/workflows/backup-neon.yml
@@ -34,19 +34,27 @@ jobs:
           echo "::add-mask::$DB_URL"
           echo "DATABASE_URL=$DB_URL" >> $GITHUB_ENV
 
-      - name: Create PostgreSQL Backup
+      - name: Install PostgreSQL Client 17
         run: |
-          # Installer PostgreSQL client 17
-          sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
-          wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
+          # Ajouter le repository PostgreSQL
+          sudo apt-get install -y curl ca-certificates
+          sudo install -d /usr/share/postgresql-common/pgdg
+          sudo curl -o /usr/share/postgresql-common/pgdg/apt.postgresql.org.asc --fail https://www.postgresql.org/media/keys/ACCC4CF8.asc
+          sudo sh -c 'echo "deb [signed-by=/usr/share/postgresql-common/pgdg/apt.postgresql.org.asc] https://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
           sudo apt-get update
           
-          # Supprimer les anciennes versions et installer la 17
-          sudo apt-get remove -y postgresql-client-16 || true
+          # Installer PostgreSQL client 17
           sudo apt-get install -y postgresql-client-17
           
-          # Vérifier la version installée
-          pg_dump --version
+          # S'assurer que pg_dump 17 est utilisé par défaut
+          export PATH="/usr/lib/postgresql/17/bin:$PATH"
+          echo "/usr/lib/postgresql/17/bin" >> $GITHUB_PATH
+          
+          # Vérifier la version
+          /usr/lib/postgresql/17/bin/pg_dump --version
+
+      - name: Create PostgreSQL Backup
+        run: |
           
           # Créer le backup
           TIMESTAMP=$(date +%Y%m%d_%H%M%S)
