Refactor code structure for improved readability and maintainability

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -20,10 +20,9 @@ COPY . .
 
 ENV NEXT_TELEMETRY_DISABLED=1
 
-# L'URL de l'API sera injectée au runtime via variable d'environnement
-# On utilise une valeur placeholder qui sera remplacée
-ARG NEXT_PUBLIC_API_URL=https://BACKEND_URL_PLACEHOLDER
-ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+# Copier le fichier .env.local pour que Next.js puisse lire les variables d'environnement
+# Cela permet d'injecter correctement NEXT_PUBLIC_API_URL au moment du build
+COPY .env.local .env.local
 
 RUN bun run build
 
