--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 # Install Python dependencies
 COPY pyproject.toml ./
+COPY README.md ./
 RUN pip install --no-cache-dir -e ".[dev]"
 
 # Copy application code (will be overridden by volume mount)
