refactor: improve code formatting and readability in deployment and migration files

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,7 +70,7 @@ jobs:
       
       - name: Run Ruff Format
         working-directory: ./backend
-        run: ruff format --check .
+        run: ruff format .
       
       - name: Run Ruff Lint
         working-directory: ./backend
