fix: update lint command to automatically fix issues and improve migration file imports

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,7 +74,7 @@ jobs:
       
       - name: Run Ruff Lint
         working-directory: ./backend
-        run: ruff check .
+        run: ruff check --fix .
 
   lint-frontend:
     name: Lint Frontend
