--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -163,7 +163,7 @@ jobs:
             --concurrency ${{ vars.CONCURRENCY || '80' }} \
             --timeout ${{ vars.TIMEOUT || '300' }} \
             --set-secrets="DATABASE_URL=${{ env.DATABASE_URL_SECRET }}:latest,SECRET_KEY=${{ env.SECRET_KEY_SECRET }}:latest,SMTP_HOST=smtp-host:latest,SMTP_PORT=smtp-port:latest,SMTP_USER=smtp-user:latest,SMTP_PASSWORD=smtp-password:latest,SMTP_FROM_EMAIL=smtp-from-email:latest,SMTP_FROM_NAME=smtp-from-name:latest,FRONTEND_URL=frontend-url:latest" \
-            --set-env-vars="^@^CORS_ORIGINS=*@ALLOWED_IPS=82.65.136.32@ALLOWED_REFERERS=budget.novacat.fr,localhost" \
+            --set-env-vars="^@^CORS_ORIGINS=https://budget.novacat.fr,https://backend-budget.novacat.fr,http://localhost:3000,http://frontend:3000@ALLOWED_IPS=82.65.136.32@ALLOWED_REFERERS=https://budget.novacat.fr,localhost" \
             --ingress=all
 
       - name: Get Backend URL
@@ -173,6 +173,7 @@ jobs:
           echo "url=$URL" >> $GITHUB_OUTPUT
           echo "✅ Backend deployed to: $URL"
           echo "🔒 Security: Restricted to frontend (budget.novacat.fr) and IP 82.65.136.32"
+          echo "✅ CORS: Configured for specific domains (no wildcard)"
 
     outputs:
       backend_url: ${{ steps.backend-url.outputs.url }}
@@ -240,4 +241,4 @@ jobs:
         run: |
           URL=$(gcloud run services describe ${{ env.FRONTEND_SERVICE }} --region ${{ env.REGION }} --format 'value(status.url)')
           echo "✅ Frontend deployed to: $URL"
-          echo "✅ CORS: Wildcard (*) enabled on backend - no update needed"
+          echo "✅ CORS: Backend configured for specific domains"
